--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
